scamper/dealias/scamper_dealias.h

typedef struct scamper_dealias_mercator scamper_dealias_mercator_t;
typedef struct scamper_dealias_ally scamper_dealias_ally_t;
typedef struct scamper_dealias_radargun scamper_dealias_radargun_t;
typedef struct scamper_dealias_prefixscan scamper_dealias_prefixscan_t;
typedef struct scamper_dealias_probe scamper_dealias_probe_t;
typedef struct scamper_dealias_probedef_udp scamper_dealias_probedef_udp_t;
typedef struct scamper_dealias_probedef_icmp scamper_dealias_probedef_icmp_t;
typedef struct scamper_dealias_probedef_tcp scamper_dealias_probedef_tcp_t;
typedef struct scamper_dealias_probedef scamper_dealias_probedef_t;
typedef struct scamper_dealias_reply scamper_dealias_reply_t;
scamper_dealias_probedef_t *scamper_dealias_probedef_alloc(void);
int scamper_dealias_probedef_method_set(scamper_dealias_probedef_t *pd, const char *meth);
int scamper_dealias_probedef_src_set(scamper_dealias_probedef_t *pd, scamper_addr_t *src);
int scamper_dealias_probedef_dst_set(scamper_dealias_probedef_t *pd, scamper_addr_t *dst);
void scamper_dealias_probedef_ttl_set(scamper_dealias_probedef_t *pd, uint8_t ttl);
void scamper_dealias_probedef_tos_set(scamper_dealias_probedef_t *pd, uint8_t tos);
void scamper_dealias_probedef_size_set(scamper_dealias_probedef_t *pd, uint16_t size);
void scamper_dealias_probedef_mtu_set(scamper_dealias_probedef_t *pd, uint16_t mtu);
void scamper_dealias_probedef_icmp_csum_set(scamper_dealias_probedef_icmp_t *icmp, uint16_t cs);
void scamper_dealias_probedef_icmp_id_set(scamper_dealias_probedef_icmp_t *icmp, uint16_t id);
void scamper_dealias_probedef_udp_sport_set(scamper_dealias_probedef_udp_t *udp, uint16_t sp);
void scamper_dealias_probedef_udp_dport_set(scamper_dealias_probedef_udp_t *udp, uint16_t dp);
void scamper_dealias_probedef_tcp_sport_set(scamper_dealias_probedef_tcp_t *tcp, uint16_t sp);
void scamper_dealias_probedef_tcp_dport_set(scamper_dealias_probedef_tcp_t *tcp, uint16_t dp);
scamper_addr_t *scamper_dealias_reply_src_get(const scamper_dealias_reply_t *reply);
const struct timeval *scamper_dealias_reply_rx_get(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_flags_get(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_proto_get(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_ttl_get(const scamper_dealias_reply_t *reply);
uint16_t scamper_dealias_reply_size_get(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_icmp(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_icmp_type_get(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_icmp_code_get(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_icmp_q(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_icmp_q_ttl_get(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_ipid32(const scamper_dealias_reply_t *reply);
uint16_t scamper_dealias_reply_ipid_get(const scamper_dealias_reply_t *reply);
uint32_t scamper_dealias_reply_ipid32_get(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_icmp_unreach(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_icmp_unreach_port(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_icmp_ttl_exp(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_is_tcp(const scamper_dealias_reply_t *reply);
uint8_t scamper_dealias_reply_tcp_flags_get(const scamper_dealias_reply_t *reply);
int scamper_dealias_reply_from_target(const scamper_dealias_probe_t *probe,
				      const scamper_dealias_reply_t *reply);
scamper_dealias_probe_t *scamper_dealias_probe_use(scamper_dealias_probe_t *probe);
void scamper_dealias_probe_free(scamper_dealias_probe_t *probe);
scamper_dealias_probedef_t *scamper_dealias_probedef_use(scamper_dealias_probedef_t *pd);
void scamper_dealias_probedef_free(scamper_dealias_probedef_t *pd);
scamper_dealias_reply_t *scamper_dealias_reply_use(scamper_dealias_reply_t *reply);
void scamper_dealias_reply_free(scamper_dealias_reply_t *reply);
scamper_dealias_mercator_t *scamper_dealias_mercator_use(scamper_dealias_mercator_t *mc);
void scamper_dealias_mercator_free(scamper_dealias_mercator_t *mc);
scamper_dealias_ally_t *scamper_dealias_ally_use(scamper_dealias_ally_t *ally);
void scamper_dealias_ally_free(scamper_dealias_ally_t *ally);
scamper_dealias_radargun_t *scamper_dealias_radargun_use(scamper_dealias_radargun_t *rg);
void scamper_dealias_radargun_free(scamper_dealias_radargun_t *rg);
scamper_dealias_prefixscan_t *scamper_dealias_prefixscan_use(scamper_dealias_prefixscan_t *pf);
void scamper_dealias_prefixscan_free(scamper_dealias_prefixscan_t *pf);